Add files to .gitignore; add Changes; change version

--- a/Changes
+++ b/Changes
@@ -1,5 +1,24 @@
-0.08
+Revision history for perl module CPAN::Nearest
 
-The algorithms of the module are now in Text::Fuzzy, which also
-includes speedups not present in version 0.07 of this module.
+0.09 2013-03-27
+
+0.08 2013-03-13
+
+* The algorithms of the module are now in Text::Fuzzy, which also
+  includes speedups not present in version 0.07 of this module.
+
+0.07 2012-07-16
+
+0.06 2012-06-24
+
+0.05 2012-06-23
+
+0.04 2012-06-22
+
+0.03 2012-06-22
+
+0.02 2012-06-21
+
+0.01 2012-06-21
+
 
