Changes for CPANTS.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for perl module CPAN::Nearest
 
+0.12 2014-02-07
+
+* Declare minimum Perl version for module in Makefile.PL.
+
+0.11 2013-12-08
+
+* Bug fix with module dependencies (Text::Fuzzy version mismatch).
+
 0.10 2013-12-01
 
 * Add "Changes".
