Move example to file

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for perl module CPAN::Nearest
 
+0.14 2017-01-13
+
+* Remove documentation of standalone program
+
 0.13 2017-01-13
 
 * Use "Text::Fuzzy"
